--- a/main.css
+++ b/main.css
@@ -1,14 +1,43 @@
+.josefin-sans{
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
 .cdtitle{
     text-align: center;
     align-items: center;
-    padding: 10px; 
+    color: #FB6F92;
+    
+}
+
+.hello{
+    background-color: #FFE5EC;
+    padding: 25px;
+    margin: 10px;
 }
 
 .type{
-    font-weight: bold;
+    border-radius: 45px;
+    border-width: 10px;
     text-align: center;
     font-size: 30px;
-    padding: 5px;
+    margin: 15px;
+    background: #fff;
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: bold;
+    color: #FB6F92;
+    padding: 40px;
+    box-shadow:
+	inset #FB6F92 0 0 0 5px, 
+    inset #FB6F92 0 0 0 1px, 
+    inset #ff7e9e 0 0 0 10px, 
+    inset #fd8da9 0 0 0 11px, 
+    inset #ff9bb4 0 0 0 16px, 
+    inset #ffb7c9 0 0 0 17px, 
+    inset #ffccd9 0 0 0 21px, 
+    inset #fddce4 0 0 0 22px;
 }
 
 .type1{
@@ -19,6 +48,9 @@
     padding-right: 10px;
     padding-bottom: 10px;
     padding-top: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
+    color: #ff5c84;
 }
 
 .col-lg-8{
@@ -36,6 +68,7 @@
     font-size: 40px;
     padding-top: 20px;
     padding-bottom: 5px; 
+    color: #FB6F92;
 }
 
 .form{
@@ -52,6 +85,13 @@
     height: 400px;
     background-size: cover;
     background-attachment: fixed;
+    border: #fd8da9;
+    border-style: double;
+    border-width: 20px;
+    border-top: 15px;
+    border-bottom: 15px;
+    border-left: 15px;
+    border-right: 15px;
 }
 
 .inputType{
@@ -65,16 +105,16 @@
     border-radius: 25px;
     padding: 10px;
     border-style: none;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
-
 
 #header{
     text-align: center;
+    padding: 20px; 
 }
 
 .full{
-    background-color: #FFC2D1;
+    background-color: #ffcfd9;
 }
 
 .navbar{
@@ -86,12 +126,269 @@
 .right{
     text-align: end;
     top: 1950px;
-    
 }
+
 .para{
     padding-top: 10px;
 }
 
 .style{
     text-decoration: none;
+}
+
+.atitle{
+    padding: 15px;
+    text-align: center;
+    color: #FB6F92; 
+}
+
+.boxx{
+    background-color: lightpink;
+    margin: 35px;
+    padding: 25px;
+}
+
+.centericon{
+    text-align: center;
+    width: auto;
+    height: auto;
+}
+
+.about{
+    text-align: center;
+}
+
+.btn-custom{
+    background-color:#FFC2D1;
+}
+
+.btn-custom:hover{
+    background-color: #f892ac !important;
+}
+
+.title{
+    background-color: #FB6F92;
+}
+
+.scrollspylist{
+    background-color: #FB6F92;
+    color: white !important;
+    text-transform: uppercase;
+}
+
+.scrollspylist:hover{
+    background-color: #ff9bb4 !important;
+}
+
+.scrollspylist.active{
+    background-color: #ff9bb4 !important;
+    border-color: #FB6F92 !important;
+}
+
+.nav-link:hover{
+    background-color: #ff9bb4 !important;
+    color: white !important;
+}
+
+.nav-link.active{
+    background-color: #ff9bb4 !important;
+    color: white !important;
+}
+
+.cupcakeheader{
+    text-align: center;
+    padding:5px;
+}
+
+.main{
+    color: #FB6F92;
+}
+
+.one{
+    color: #FB6F92;
+}
+
+.two{
+    color: #FB6F92;
+}
+
+.three{
+    color: #FB6F92;
+}
+
+.four{
+    color: #FB6F92;
+}
+
+.five{
+    color: #FB6F92;
+}
+.images{
+    background-color: white;
+}
+.program{
+    margin: 10px;
+}
+
+.cardbutton{
+    text-align: center;
+    color: #FF8FAB;
+    border-radius: 45px;
+    border-width: 3px;
+    text-align: center;
+    margin: 5px;
+    background: #fff;
+    line-height: 30px;
+    font-weight: bold;
+    color: #FB6F92;
+    padding: 30px;
+    box-shadow:
+	inset #FB6F92 0 0 0 5px, 
+    inset #FB6F92 0 0 0 1px, 
+    inset #ff7e9e 0 0 0 10px, 
+    inset #fd8da9 0 0 0 11px, 
+    inset #ff9bb4 0 0 0 16px, 
+    inset #ffb7c9 0 0 0 17px, 
+    inset #ffccd9 0 0 0 21px, 
+    inset #fddce4 0 0 0 22px;
+}
+
+.ingredients{
+    text-align: center;
+    border-width: 3px;
+    text-align: center;
+    font-weight: 700;
+    padding:0px;
+}
+
+.orderbutton{
+    text-align: center;
+    color: #FF8FAB;
+    border-width: 3px;
+    text-align: center;
+    background: #fff;
+    font-weight: bold;
+}
+
+.pic{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  border-width: 10px;
+  border-style: none;
+  margin-bottom: 15px; 
+}
+.accordion-item{
+    color: #f892ac;
+}
+#header{
+    color: #FB6F92
+}
+.accordion-body{
+    color: #f892ac;
+}
+
+.accordion-button {
+    color: #ff5c84;
+}
+.bagg{
+    text-decoration: none;
+    color:#FB6F92;
+   
+}
+.boxh{
+    background-color: #f9d8e0;
+    padding: 40px;
+    margin: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.reg{
+    text-align: center;
+    padding: 30px;
+    color: #FF8FAB;
+
+}
+.pageheader{
+    text-align: center;
+    color:#ff5c84;
+}
+.bordername{
+    background-color:#f9b2c2;
+    padding: 20px;
+    margin: 10px;
+    padding-top: 25px;
+}
+
+#logo{
+    height: 100px;
+    width: 200px;
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+}
+
+#logorow{
+    text-align: center;
+}
+
+.body{
+    background-color: #FFE5EC;
+}
+
+nav{
+    background-color: #ffcfd9;
+}
+.carttitle{
+    color:#ff5c84;
+    text-align: center;
+    font-size: 50px;
+    padding: 30px;
+}
+.headtitle{
+    color:#FB6F92;
+    padding: 20px;
+   
+}
+.headtitle2{
+    color:#fc84a2;
+    padding: 20px;
+}
+.align{
+    display: inline-flex;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    margin-left: 75px;
+    margin-right: 75px;
+}
+.bt{
+    background-color:  #f9d8e0;
+    text-align: center;
+    padding-top: 20px;
+    margin: 20px;
+}
+.quana{
+    padding: 15px;
+    color:#ff5c84;
+}
+.btnn{
+    text-decoration: none;
+    color:#fa4874;
+}
+
+.orderingdisplay{
+    min-width: 100%; 
+    min-height: 100%; 
+    width: auto; 
+    height: auto; 
+    object-fit: cover
+}
+.table{
+    border: 1px solid;
+}
+
+.quantity{
+    text-align: center;
 }
