--- a/main.css
+++ b/main.css
@@ -445,3 +445,11 @@ nav{
     font-size: 50px;
     text-align: center;
 }
+.re{
+    font-size: small;
+}
+
+.alltotal{
+    text-align: center;
+    font-size: 100px;
+}
